--- a/index.html
+++ b/index.html
@@ -4,145 +4,194 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Babushka</title>
+
     <style>
         body {
             font-family: sans-serif;
+            background-color: #ec9434;
+            margin: 0;
         }
 
         img {
-            width: 100%;
+            max-width: 100%;
+            border-radius: 5px;
         }
 
         #liste {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
             grid-gap: 1em;
             margin: 2em;
         }
 
-        .person {
+        .retter {
             padding: 1em;
-            border: 1px solid;
             border-radius: 1em;
         }
 
+        header {
+            background-color: #ec9434;
+            display: flex;
+            /*            justify-content: center;*/
+            position: sticky;
+            font-family: 'Roboto';
+            text-transform: uppercase;
+            z-index: 20;
+        }
+
+        .logo_container {
+            background-color: #ec9434;
+            position: fixed;
+            width: 100%;
+        }
+
+        .logo {
+            margin-right: 69vw;
+        }
+
         nav {
+            display: flex;
+            right: 0;
+            position: fixed;
+            margin-top: 7px;
+        }
+
+
+        nav a {
+            padding: 10px;
+            cursor: pointer;
+        }
+
+        nav a:link {
+            color: black;
+            text-decoration: none;
+        }
+
+        nav a:visited {
+            color: black;
+            text-decoration: none;
+        }
+
+        nav a:hover {
+            color: #96021e;
+            text-decoration: none;
+        }
+
+        h1 {
             text-align: center;
-            padding: 10px;
-
+            margin-top: 5vw;
         }
 
-        button {
-            background-color: wheat;
-            border-color: wheat;
-            border-radius: 5px;
+        h1,
+        h2,
+        p {
+            font-family: 'roboto';
+            color: #39281c;
+        }
+
+        h3 {
+            color: #8b4f0d;
+        }
+
+        article {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            padding: 10px;
-            width: 100px;
+            cursor: pointer;
         }
-
-
-        button:hover {
-            background-color: black;
-            color: white;
-        }
-
-
-        button:focus {
-            background-color: black;
-            color: white;
-        }
-
     </style>
 
 </head>
 
 <body>
     <header>
-        <h1>Alle</h1>
+        <div class="logo_container"><img src="babushka.png" alt="" class="logo" width="50" height="50"></div>
+
+        <nav>
+            <a data-kategori="alle" class="valgt">Alle retter</a>
+            <a data-kategori="forretter">Forretter</a>
+            <a data-kategori="hovedretter">Hovedretter</a>
+            <a data-kategori="desserter">Desserter</a>
+            <a data-kategori="drikkevarer">Drikkevarer</a>
+        </nav>
     </header>
-    <nav>
-        <button data-troende="alle" class="valgt">Alle retter</button>
-        <button data-troende="ja">Forretter</button>
-        <button data-troende="nej">Hovedretter</button>
-        <button data-troende="tvivler">Desserter</button>
-    </nav>
+
+    <h1>Menu</h1>
 
     <section id="liste"></section>
 
     <template>
-        <article class="person">
-            <h2 class="navn"></h2>
-            <p class="køn"></p>
+        <article class="retter">
             <img src="" alt="" class="billede">
+            <h2 class="navn"></h2>
+            <p class="kort_beskrivelse"></p>
+            <h3 class="pris"></h3>
         </article>
     </template>
 
     <script>
         const header = document.querySelector("header h1");
-        const medieurl = "https://babushka-dd8a.restdb.io/rest/media";
-        const myHeaders = {
+        const url = "https://babushka-dd8a.restdb.io/rest/menu";
+        const medieurl = "https://babushka-dd8a.restdb.io/media/";
 
-            "x-apikey": "600ec2fb1346a1524ff12de4"
-        }
+        const options = {
+            headers: {
+                'x-apikey': "600ec2fb1346a1524ff12de4"
+            }
+        };
 
         document.addEventListener("DOMContentLoaded", start)
-        let personer;
+        let retter;
         let filter = "alle";
 
         // første funktion der kaldes efter DOM er loaded
         function start() {
-            const filterKnapper = document.querySelectorAll("nav button");
-            filterKnapper.forEach(knap => knap.addEventListener("click", filtrerPersoner));
-            loadJSON();
+            const filterKnapper = document.querySelectorAll("nav a");
+            filterKnapper.forEach(knap => knap.addEventListener("click", filtrerRetter));
+            hentData();
         }
         //eventlistener knyttet til knapperne der vælger hvad for et filter der er aktivt
-        function filtrerPersoner() {
-            filter = this.dataset.troende;
+        function filtrerRetter() {
+            filter = this.dataset.kategori;
             document.querySelector(".valgt").classList.remove("valgt");
             this.classList.add("valgt");
-            visPersoner();
+            visRetter();
             header.textContent = this.textContent;
         }
 
-        async function loadJSON() {
-            const JSONData = await fetch("https://babushka-dd8a.restdb.io/rest/menu", {
-                headers: myHeaders
-            });
-            personer = await JSONData.json();
-            console.log("Personer", personer);
-            visPersoner();
+        async function hentData() {
+            const JSONData = await fetch(url, options);
+            //headers: options
+            retter = await JSONData.json();
+            console.log("mad", retter);
+            visRetter();
         }
 
         //funktion der viser personer i liste view
-        function visPersoner() {
+        function visRetter() {
 
             const dest = document.querySelector("#liste"); // container til articles med en person
             const skabelon = document.querySelector("template").content; // select indhold af html skabelon (article)
             dest.textContent = ""; //ryd container inden ny loop
 
-            personer.forEach(person => {
-                console.log("Troende", person.troende);
+            retter.forEach(mad => {
                 // loop igennem json (personer)
                 // tjek hvilken tro personen har og sammenlign med aktuelt filter eller vis alle, hvis filter har værdien "alle"
 
-                if (filter == person.troende || filter == "alle") {
+                if (filter == mad.kategori || filter == "alle") {
 
                     const klon = skabelon.cloneNode(true);
-                    klon.querySelector(".navn").textContent = person.fornavn + " " + person.efternavn;
-                    klon.querySelector(".billede").src = medieurl + person.billede;
-                    klon.querySelector(".person").addEventListener("click", () => visDetaljer(person));
+                    klon.querySelector(".navn").textContent = mad.navn;
+                    klon.querySelector(".kort_beskrivelse").textContent = mad.kortbeskrivelse;
+                    klon.querySelector(".billede").src = medieurl + mad.billede;
+                    klon.querySelector(".pris").textContent = (`Pris ${mad.pris},-`);
+                    klon.querySelector(".retter").addEventListener("click", () => visDetaljer(mad));
                     dest.appendChild(klon);
                 }
             })
         }
 
-        function visDetaljer(hvem) {
-            location.href = `02-detalje.html?id=${hvem._id}`;
+        function visDetaljer(hvad) {
+            location.href = `single_view.html?id=${hvad._id}`;
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
