--- a/single_view.html
+++ b/single_view.html
@@ -1,90 +1,165 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 
 <head>
     <meta charset="UTF-8">
     <title>Single view</title>
 
     <style>
-        h2 {
-            font-family: 'roboto';
+        body {
+            font-family: sans-serif;
+            background-color: #ec9434;
         }
 
         img {
+            max-width: 100%;
             border-radius: 5px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+
+        #liste {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+            grid-gap: 1em;
+            margin: 2em;
+        }
+
+        .retter {
+            padding: 1em;
+            border-radius: 1em;
+        }
+
+        header {
+            background-color: transparent;
+            display: flex;
+            /*            justify-content: center;*/
+            position: sticky;
+            font-family: 'Roboto';
+            text-transform: uppercase;
+            z-index: 20;
+        }
+
+        .logo {
+            margin-right: 69vw;
+        }
+
+        nav {
+            display: flex;
+            background-color: #ec9434;
+
+            /*
+            top: 0;
+            width: 100%;
+*/
+            right: 0;
+            position: fixed;
+        }
+
+
+        nav a {
+            padding: 10px;
+            cursor: pointer;
+        }
+
+        nav a:link {
+            color: black;
+            text-decoration: none;
+        }
+
+        nav a:visited {
+            color: black;
+            text-decoration: none;
+        }
+
+        nav a:hover {
+            color: #96021e;
+            text-decoration: none;
+        }
+
+        h2,
+        h3 {
+            font-family: 'roboto';
+            color: #39281c;
+            text-align: justify;
+
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+
+        h4 {
+            color: #8b4f0d;
+            text-align: end;
+
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
         }
 
         button {
-            background-color: wheat;
-            border-color: wheat;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            padding: 10px;
-            width: 100px;
-
-            font-family: 'roboto';
+            background-color: transparent;
+            border: none;
+            border-radius: 50%;
+            color: #7c071b;
+            cursor: pointer;
+            font-size: 16px;
+            line-height: 48px;
+            width: 48px;
         }
-
 
         button:hover {
-            background-color: black;
-            color: white;
+            background-color: #7c071b;
+            color: #ec9434;
         }
-
-        button:focus {
-            background-color: black;
-            color: white;
-        }
-
     </style>
 </head>
 
 <body>
-    <article class="person">
+    <article class="mad">
+        <button>←</button>
+        <img src="" alt="" class="billede">
         <h2 class="navn"></h2>
-        <p class="køn"></p>
-        <img src="" alt="" class="profil-billede">
+        <h3 class="lang_beskrivelse"></h3>
+        <h4 class="pris"></h4>
     </article>
-
-    <button>Tilbage</button>
 
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const id = urlParams.get("id");
 
-        const medieurl = "https://babushka-dd8a.restdb.io/rest/menu/media";
-        let personer;
-        const myHeaders = {
+        const medieurl = "https://babushka-dd8a.restdb.io/media/";
+        let ret;
 
+        const options = {
             "x-apikey": "600ec2fb1346a1524ff12de4"
         }
-
         console.log("ID", id);
-        document.addEventListener("DOMContentLoaded", loadJSON);
+        document.addEventListener("DOMContentLoaded", hentData);
 
-        async function loadJSON() {
-            const JSONData = await fetch(`https://babushka-dd8a.restdb.io/media${id}`, {
-                headers: myHeaders
+        async function hentData() {
+            const JSONData = await fetch(`https://babushka-dd8a.restdb.io/rest/menu/${id}`, {
+                headers: options
             });
-            personer = await JSONData.json();
+            ret = await JSONData.json();
 
-            console.log("Personer", personer);
-            visPersoner();
+            console.log("Retter", ret);
+            visRet(ret);
         }
 
-        function visPersoner() {
-            document.querySelector(".navn").textContent = personer.fornavn + " " + personer.efternavn;
-            document.querySelector(".profil-billede").src = medieurl + personer.billede;
-            document.querySelector("button").addEventListener("click", tilbageTilPersonGalleri);
+        function visRet() {
+            document.querySelector(".navn").textContent = ret.navn;
+            document.querySelector(".lang_beskrivelse").textContent = ret.langbeskrivelse;
+            document.querySelector(".pris").textContent = (`Pris: ${ret.pris},-`);
+            document.querySelector(".billede").src = medieurl + ret.billede;
+            document.querySelector("button").addEventListener("click", tilbage)
         }
 
-        function tilbageTilPersonGalleri() {
+        function tilbage() {
             history.back();
         }
-
     </script>
-
-</body>
-
-</html>
+</body></html>
